[package]
name = "chfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features = ["full"]}
tokio = { version = "1", features = ["full"] }
xml-rs = "0.8.16"
url = "2.4.1"
log = "0.4.20"
chrono = "0.4.28"
mime_guess = "2.0.4"
md5 = "0.7.0"
percent-encoding = "2.3.0"
urlencoding = "2.1.3"
