[package]
name = "rhfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.28"
mime_guess = "2.0.4"
md5 = "0.7.0"
urlencoding = "2.1.3"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")']
[target.'cfg(target_os = "windows")']
[target.'cfg(target_os = "macos")']
[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "arm", target_arch = "armv7"))']
