[package]
name = "rhfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
# http-body-util = "0.1.0-rc.3"
# hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
chrono = "0.4.28"
mime_guess = "2.0.4"
md5 = "0.7.0"
urlencoding = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
flate2 = "1.0.27"
log = "0.4"
env_logger = "0.10"
base64 = "0.21.4"
url = "2.4.1"
async-recursion = "1.0.5"

[target.'cfg(target_os = "linux")']
[target.'cfg(target_os = "windows")']
[target.'cfg(target_os = "macos")']
[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "arm", target_arch = "armv7"))']
